init ip
