# server/pb/mchost_ip_api.pb.go
@@ -1,0 +1,135 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.27.1
+// 	protoc        v3.12.4
+// source: proto/mchost_ip_api.proto
+
+package pb
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+var File_proto_mchost_ip_api_proto protoreflect.FileDescriptor
+
+var file_proto_mchost_ip_api_proto_rawDesc = []byte{
+	0x0a, 0x19, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69,
+	0x70, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x14, 0x6d, 0x63, 0x68,
+	0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76,
+	0x31, 0x1a, 0x1d, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f,
+	0x69, 0x70, 0x5f, 0x70, 0x61, 0x79, 0x6c, 0x6f, 0x61, 0x64, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x32, 0xff, 0x04, 0x0a, 0x09, 0x49, 0x70, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x50,
+	0x0a, 0x05, 0x47, 0x65, 0x74, 0x49, 0x70, 0x12, 0x22, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74,
+	0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47,
+	0x65, 0x74, 0x49, 0x70, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x6d, 0x63,
+	0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e,
+	0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x49, 0x70, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
+	0x12, 0x59, 0x0a, 0x08, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x49, 0x70, 0x12, 0x25, 0x2e, 0x6d,
+	0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
+	0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x49, 0x70, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x26, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74,
+	0x65, 0x49, 0x70, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x59, 0x0a, 0x08, 0x44,
+	0x65, 0x6c, 0x65, 0x74, 0x65, 0x49, 0x70, 0x12, 0x25, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74,
+	0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x44,
+	0x65, 0x6c, 0x65, 0x74, 0x65, 0x49, 0x70, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x26,
+	0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x49, 0x70, 0x52, 0x65,
+	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x5c, 0x0a, 0x09, 0x52, 0x65, 0x73, 0x65, 0x72, 0x76,
+	0x65, 0x49, 0x70, 0x12, 0x26, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x73, 0x65, 0x72,
+	0x76, 0x65, 0x49, 0x70, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x27, 0x2e, 0x6d, 0x63,
+	0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e,
+	0x76, 0x31, 0x2e, 0x52, 0x65, 0x73, 0x65, 0x72, 0x76, 0x65, 0x49, 0x70, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x12, 0x62, 0x0a, 0x0b, 0x55, 0x6e, 0x72, 0x65, 0x73, 0x65, 0x72, 0x76,
+	0x65, 0x49, 0x70, 0x12, 0x28, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x6e, 0x72, 0x65, 0x73,
+	0x65, 0x72, 0x76, 0x65, 0x49, 0x70, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x29, 0x2e,
+	0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x6e, 0x72, 0x65, 0x73, 0x65, 0x72, 0x76, 0x65, 0x49, 0x70,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x50, 0x0a, 0x05, 0x55, 0x73, 0x65, 0x49,
+	0x70, 0x12, 0x22, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65,
+	0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x73, 0x65, 0x49, 0x70, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69,
+	0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x73, 0x65,
+	0x49, 0x70, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x56, 0x0a, 0x07, 0x55, 0x6e,
+	0x75, 0x73, 0x65, 0x49, 0x70, 0x12, 0x24, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69,
+	0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x6e, 0x75,
+	0x73, 0x65, 0x49, 0x70, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x25, 0x2e, 0x6d, 0x63,
+	0x68, 0x6f, 0x73, 0x74, 0x5f, 0x69, 0x70, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e,
+	0x76, 0x31, 0x2e, 0x55, 0x6e, 0x75, 0x73, 0x65, 0x49, 0x70, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x42, 0x06, 0x5a, 0x04, 0x2e, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x33,
+}
+
+var file_proto_mchost_ip_api_proto_goTypes = []interface{}{
+	(*GetIpRequest)(nil),        // 0: mchost_ip.service.v1.GetIpRequest
+	(*CreateIpRequest)(nil),     // 1: mchost_ip.service.v1.CreateIpRequest
+	(*DeleteIpRequest)(nil),     // 2: mchost_ip.service.v1.DeleteIpRequest
+	(*ReserveIpRequest)(nil),    // 3: mchost_ip.service.v1.ReserveIpRequest
+	(*UnreserveIpRequest)(nil),  // 4: mchost_ip.service.v1.UnreserveIpRequest
+	(*UseIpRequest)(nil),        // 5: mchost_ip.service.v1.UseIpRequest
+	(*UnuseIpRequest)(nil),      // 6: mchost_ip.service.v1.UnuseIpRequest
+	(*GetIpResponse)(nil),       // 7: mchost_ip.service.v1.GetIpResponse
+	(*CreateIpResponse)(nil),    // 8: mchost_ip.service.v1.CreateIpResponse
+	(*DeleteIpResponse)(nil),    // 9: mchost_ip.service.v1.DeleteIpResponse
+	(*ReserveIpResponse)(nil),   // 10: mchost_ip.service.v1.ReserveIpResponse
+	(*UnreserveIpResponse)(nil), // 11: mchost_ip.service.v1.UnreserveIpResponse
+	(*UseIpResponse)(nil),       // 12: mchost_ip.service.v1.UseIpResponse
+	(*UnuseIpResponse)(nil),     // 13: mchost_ip.service.v1.UnuseIpResponse
+}
+var file_proto_mchost_ip_api_proto_depIdxs = []int32{
+	0,  // 0: mchost_ip.service.v1.IpService.GetIp:input_type -> mchost_ip.service.v1.GetIpRequest
+	1,  // 1: mchost_ip.service.v1.IpService.CreateIp:input_type -> mchost_ip.service.v1.CreateIpRequest
+	2,  // 2: mchost_ip.service.v1.IpService.DeleteIp:input_type -> mchost_ip.service.v1.DeleteIpRequest
+	3,  // 3: mchost_ip.service.v1.IpService.ReserveIp:input_type -> mchost_ip.service.v1.ReserveIpRequest
+	4,  // 4: mchost_ip.service.v1.IpService.UnreserveIp:input_type -> mchost_ip.service.v1.UnreserveIpRequest
+	5,  // 5: mchost_ip.service.v1.IpService.UseIp:input_type -> mchost_ip.service.v1.UseIpRequest
+	6,  // 6: mchost_ip.service.v1.IpService.UnuseIp:input_type -> mchost_ip.service.v1.UnuseIpRequest
+	7,  // 7: mchost_ip.service.v1.IpService.GetIp:output_type -> mchost_ip.service.v1.GetIpResponse
+	8,  // 8: mchost_ip.service.v1.IpService.CreateIp:output_type -> mchost_ip.service.v1.CreateIpResponse
+	9,  // 9: mchost_ip.service.v1.IpService.DeleteIp:output_type -> mchost_ip.service.v1.DeleteIpResponse
+	10, // 10: mchost_ip.service.v1.IpService.ReserveIp:output_type -> mchost_ip.service.v1.ReserveIpResponse
+	11, // 11: mchost_ip.service.v1.IpService.UnreserveIp:output_type -> mchost_ip.service.v1.UnreserveIpResponse
+	12, // 12: mchost_ip.service.v1.IpService.UseIp:output_type -> mchost_ip.service.v1.UseIpResponse
+	13, // 13: mchost_ip.service.v1.IpService.UnuseIp:output_type -> mchost_ip.service.v1.UnuseIpResponse
+	7,  // [7:14] is the sub-list for method output_type
+	0,  // [0:7] is the sub-list for method input_type
+	0,  // [0:0] is the sub-list for extension type_name
+	0,  // [0:0] is the sub-list for extension extendee
+	0,  // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_proto_mchost_ip_api_proto_init() }
+func file_proto_mchost_ip_api_proto_init() {
+	if File_proto_mchost_ip_api_proto != nil {
+		return
+	}
+	file_proto_mchost_ip_payload_proto_init()
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_proto_mchost_ip_api_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   0,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_proto_mchost_ip_api_proto_goTypes,
+		DependencyIndexes: file_proto_mchost_ip_api_proto_depIdxs,
+	}.Build()
+	File_proto_mchost_ip_api_proto = out.File
+	file_proto_mchost_ip_api_proto_rawDesc = nil
+	file_proto_mchost_ip_api_proto_goTypes = nil
+	file_proto_mchost_ip_api_proto_depIdxs = nil
+}
