# server/pb/mchost_spot_instance_api.pb.go
@@ -1,116 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.27.1
-// 	protoc        v3.12.4
-// source: proto/mchost_spot_instance_api.proto
-
-package pb
-
-import (
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-var File_proto_mchost_spot_instance_api_proto protoreflect.FileDescriptor
-
-var file_proto_mchost_spot_instance_api_proto_rawDesc = []byte{
-	0x0a, 0x24, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x73,
-	0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e, 0x73, 0x74, 0x61, 0x6e, 0x63, 0x65, 0x5f, 0x61, 0x70, 0x69,
-	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x1f, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x73,
-	0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e, 0x73, 0x74, 0x61, 0x6e, 0x63, 0x65, 0x2e, 0x73, 0x65, 0x72,
-	0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x1a, 0x28, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x6d,
-	0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x73, 0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e, 0x73, 0x74, 0x61,
-	0x6e, 0x63, 0x65, 0x5f, 0x70, 0x61, 0x79, 0x6c, 0x6f, 0x61, 0x64, 0x2e, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x32, 0x88, 0x04, 0x0a, 0x0b, 0x53, 0x70, 0x6f, 0x74, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63,
-	0x65, 0x12, 0x78, 0x0a, 0x0b, 0x47, 0x65, 0x74, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65,
-	0x12, 0x33, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x73, 0x70, 0x6f, 0x74, 0x5f, 0x69,
-	0x6e, 0x73, 0x74, 0x61, 0x6e, 0x63, 0x65, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e,
-	0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x34, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x73,
-	0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e, 0x73, 0x74, 0x61, 0x6e, 0x63, 0x65, 0x2e, 0x73, 0x65, 0x72,
-	0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x54, 0x65, 0x6d, 0x70, 0x6c,
-	0x61, 0x74, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x81, 0x01, 0x0a, 0x0e,
-	0x4c, 0x61, 0x75, 0x6e, 0x63, 0x68, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x12, 0x36,
-	0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x73, 0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e, 0x73,
-	0x74, 0x61, 0x6e, 0x63, 0x65, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31,
-	0x2e, 0x4c, 0x61, 0x75, 0x6e, 0x63, 0x68, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x37, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f,
-	0x73, 0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e, 0x73, 0x74, 0x61, 0x6e, 0x63, 0x65, 0x2e, 0x73, 0x65,
-	0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x61, 0x75, 0x6e, 0x63, 0x68, 0x54,
-	0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12,
-	0x7b, 0x0a, 0x0c, 0x53, 0x74, 0x6f, 0x70, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x12,
-	0x34, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x73, 0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e,
-	0x73, 0x74, 0x61, 0x6e, 0x63, 0x65, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76,
-	0x31, 0x2e, 0x53, 0x74, 0x6f, 0x70, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x35, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x73,
-	0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e, 0x73, 0x74, 0x61, 0x6e, 0x63, 0x65, 0x2e, 0x73, 0x65, 0x72,
-	0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x53, 0x74, 0x6f, 0x70, 0x54, 0x65, 0x6d, 0x70,
-	0x6c, 0x61, 0x74, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x7e, 0x0a, 0x0e,
-	0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x12, 0x36,
-	0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f, 0x73, 0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e, 0x73,
-	0x74, 0x61, 0x6e, 0x63, 0x65, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31,
-	0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x34, 0x2e, 0x6d, 0x63, 0x68, 0x6f, 0x73, 0x74, 0x5f,
-	0x73, 0x70, 0x6f, 0x74, 0x5f, 0x69, 0x6e, 0x73, 0x74, 0x61, 0x6e, 0x63, 0x65, 0x2e, 0x73, 0x65,
-	0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x54, 0x65, 0x6d, 0x70,
-	0x6c, 0x61, 0x74, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x42, 0x06, 0x5a, 0x04,
-	0x2e, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
-}
-
-var file_proto_mchost_spot_instance_api_proto_goTypes = []interface{}{
-	(*GetTemplateRequest)(nil),     // 0: mchost_spot_instance.service.v1.GetTemplateRequest
-	(*LaunchTemplateRequest)(nil),  // 1: mchost_spot_instance.service.v1.LaunchTemplateRequest
-	(*StopTemplateRequest)(nil),    // 2: mchost_spot_instance.service.v1.StopTemplateRequest
-	(*CreateTemplateRequest)(nil),  // 3: mchost_spot_instance.service.v1.CreateTemplateRequest
-	(*GetTemplateResponse)(nil),    // 4: mchost_spot_instance.service.v1.GetTemplateResponse
-	(*LaunchTemplateResponse)(nil), // 5: mchost_spot_instance.service.v1.LaunchTemplateResponse
-	(*StopTemplateResponse)(nil),   // 6: mchost_spot_instance.service.v1.StopTemplateResponse
-}
-var file_proto_mchost_spot_instance_api_proto_depIdxs = []int32{
-	0, // 0: mchost_spot_instance.service.v1.SpotService.GetTemplate:input_type -> mchost_spot_instance.service.v1.GetTemplateRequest
-	1, // 1: mchost_spot_instance.service.v1.SpotService.LaunchTemplate:input_type -> mchost_spot_instance.service.v1.LaunchTemplateRequest
-	2, // 2: mchost_spot_instance.service.v1.SpotService.StopTemplate:input_type -> mchost_spot_instance.service.v1.StopTemplateRequest
-	3, // 3: mchost_spot_instance.service.v1.SpotService.CreateTemplate:input_type -> mchost_spot_instance.service.v1.CreateTemplateRequest
-	4, // 4: mchost_spot_instance.service.v1.SpotService.GetTemplate:output_type -> mchost_spot_instance.service.v1.GetTemplateResponse
-	5, // 5: mchost_spot_instance.service.v1.SpotService.LaunchTemplate:output_type -> mchost_spot_instance.service.v1.LaunchTemplateResponse
-	6, // 6: mchost_spot_instance.service.v1.SpotService.StopTemplate:output_type -> mchost_spot_instance.service.v1.StopTemplateResponse
-	4, // 7: mchost_spot_instance.service.v1.SpotService.CreateTemplate:output_type -> mchost_spot_instance.service.v1.GetTemplateResponse
-	4, // [4:8] is the sub-list for method output_type
-	0, // [0:4] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
-}
-
-func init() { file_proto_mchost_spot_instance_api_proto_init() }
-func file_proto_mchost_spot_instance_api_proto_init() {
-	if File_proto_mchost_spot_instance_api_proto != nil {
-		return
-	}
-	file_proto_mchost_spot_instance_payload_proto_init()
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_proto_mchost_spot_instance_api_proto_rawDesc,
-			NumEnums:      0,
-			NumMessages:   0,
-			NumExtensions: 0,
-			NumServices:   1,
-		},
-		GoTypes:           file_proto_mchost_spot_instance_api_proto_goTypes,
-		DependencyIndexes: file_proto_mchost_spot_instance_api_proto_depIdxs,
-	}.Build()
-	File_proto_mchost_spot_instance_api_proto = out.File
-	file_proto_mchost_spot_instance_api_proto_rawDesc = nil
-	file_proto_mchost_spot_instance_api_proto_goTypes = nil
-	file_proto_mchost_spot_instance_api_proto_depIdxs = nil
-}
